--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,5 +1,8 @@
 name: Playwright Tests
 on:
+  schedule:
+    # * is a special character in YAML so you have to quote this string
+    - cron:  '1 1,10,15 * * *'
   push:
     branches: [ main, master ]
   pull_request:
